Fix: Mejora la disposición y visualización de botones e imágenes en la web. Consolida CSS, elimina redundancias y corrige la visibilidad de la imagen en móvil.

--- a/index.html
+++ b/index.html
@@ -62,27 +62,29 @@
             <a href="#" class="logo">
                 <img src="content/logo.png" alt="Logo de BMEDIK - Centro Médico en Esplugues de Llobregat" loading="lazy">
             </a>
+            <div class="nav-links-desktop">
+                <a href="#proposal">Propuesta</a>
+                <a href="#location">Ubicación</a>
+                <a href="#contact" class="btn-nav">Contacto</a>
+            </div>
+            <div class="nav-links-mobile">
+                <a href="#proposal">Propuesta</a>
+                <a href="#location">Ubicación</a>
+                <a href="#contact">Contacto</a>
+            </div>
             <button class="hamburger" aria-label="Toggle navigation menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </button>
-            <ul class="nav-links">
-                <li><a href="#proposal">Propuesta</a></li>
-                <li><a href="#location">Ubicación</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
         </nav>
     </header>
 
     <main>
         <section id="hero">
-            <video autoplay muted loop playsinline poster="content/seccionInicio.png" id="hero-video">
-                <source src="content/videoIntroduccion.mp4" type="video/mp4">
-            </video>
             <div class="hero-content">
-                <h1>Centro Médico BMEDIK</h1>
-                <p>La solución para el Profesional Médico que necesita un lugar para crear su propio consultorio.</p>
+                <h1>Alquiler de Consultorios Médicos en Esplugues de Llobregat</h1>
+                <p>Consultorios y despachos médicos totalmente equipados. Flexibilidad por horas o alquiler fijo.</p>
                 <a href="#contact" class="btn">Contacta</a>
             </div>
         </section>
