Refactor: Enhance website design and update content
- Updated map coordinates for accuracy.
- Replaced old logo with new logo.
- Implemented 'Back to Top' button for improved navigation.
- Applied advanced CSS techniques for a modern, minimalist design across the site.
- Switched font to Lato for a professional appearance.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       "description": "Centro de alquiler de consultorios y despachos para profesionales médicos en Esplugues de Llobregat.",
       "telephone": "+34691392308",
       "url": "https://www.bmedik.com",
-      "logo": "https://www.bmedik.com/content/logo.png",
+      "logo": "https://www.bmedik.com/content/logonew.png",
       "image": "https://www.bmedik.com/content/seccionInicio.png",
       "address": {
         "@type": "PostalAddress",
@@ -45,8 +45,8 @@
       },
       "geo": {
         "@type": "GeoCoordinates",
-        "latitude": "41.3745",
-        "longitude": "2.0805"
+                "latitude": "41.376919",
+        "longitude": "2.085957"
       },
       "openingHours": "Mo,Tu,We,Th,Fr 09:00-20:00", // Example: Monday-Friday 9am-8pm. Adjust if needed.
       "priceRange": "€€" // Example price range. Can be adjusted or removed.
@@ -60,7 +60,7 @@
     <header>
         <nav class="container">
             <a href="#" class="logo">
-                <img src="content/logo.png" alt="Logo de BMEDIK - Centro Médico en Esplugues de Llobregat" loading="lazy">
+                <img src="content/logonew.png" alt="Logo de BMEDIK - Centro Médico en Esplugues de Llobregat" loading="lazy">
             </a>
             <div class="nav-links-desktop">
                 <a href="#proposal">Propuesta</a>
